--- a/05_django_advance/01_DJANGO_RECAP/home/templates/home/guess.html
+++ b/05_django_advance/01_DJANGO_RECAP/home/templates/home/guess.html
@@ -6,7 +6,12 @@
 
 {% block body %}
 <h1>질문지</h1>
-    <form action="{% url 'home:answer' %}" method="GET">
+    <!-- 사용자가 입력한 데이터를 views의 answer로 보내라 -->
+    <!-- 안에 데이터가 몇개가 있든 form 이라는 하나의 편지 봉투에 넣어서 보내는 것,
+        get은 안에 내용물이 다 보이는 것(보안된 요청이 아님), post는 숨겨서 보내는 것(보호된 요청)-->
+    <form action="{% url 'home:answer' %}" method="POST">
+        <!-- post는 숨겨서 보내는 것(보호된 요청)이므로 {% csrf_token %} 추가해주고 -->
+        {% csrf_token %}
         <div>
             <label for="q1">내 생일은?</label>
             <input id="q1" name="q1" type="text">
