05_django_advance | Django Refactoring & Django Admin | 191008

--- a/05_django_advance/01_DJANGO_RECAP/board/templates/board/list.html
+++ b/05_django_advance/01_DJANGO_RECAP/board/templates/board/list.html
@@ -12,7 +12,9 @@
 <ul>
     {% for article in articles %} <!-- [<A1>, <A2>, <A3>, ...] -->
         <li>
-            <a href="{% url 'board:detail' article.id %}">{{ article.title }}</a>
+            <a href="{{ article.get_absolute_url }}">
+                {{ article.title }}
+            </a>
         </li> <!-- <A1> -->
     {% endfor %}
 </ul>
