--- a/05_django_advance/01_DJANGO_RECAP/board/templates/board/new.html
+++ b/05_django_advance/01_DJANGO_RECAP/board/templates/board/new.html
@@ -2,22 +2,12 @@
 {% block title %}New article{% endblock title %}
 
 {% block body %}
-    <h1>New article</h1>
-    <!-- board앱에 create로 이 데이터를 form 봉투에 담아 보내겠다 -->
-    <form action="{% url 'board:create' %}" method="POST"> <!-- html 내놔 - get, 전달한 내용 DB 반영 - post -->
-        {% csrf_token %} <!-- 봉투 안에 보안토큰을 넣어 보낸다 -->
-        <div>
-            <label for="title">제목:</label>
-            <input id="title" name="title">
-        </div>
-        <div>
-            <label for="content">내용:</label>
-            <textarea id="content" name="content" cols="30" rows="10"></textarea>
-        </div>
-        <div>
-            <input type="submit" value="제출">
-        </div>
-    </form>
+<h1>New article</h1>
+<form method="POST">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit">
+</form>
 
 {% endblock body %}
 
