--- a/05_django_advance/02_MY_RECAP/classroom/templates/classroom/list.html
+++ b/05_django_advance/02_MY_RECAP/classroom/templates/classroom/list.html
@@ -16,7 +16,7 @@
 
 <div>
     <a href="{% url 'classroom:new' %}">
-        <button>ADD NEW STUDENT</button>
+        <button>ADD NEW STUDENT <span>&#x1F64B;</span></button>
     </a>
 </div>
 {% endblock body %}
