--- a/05_django_advance/02_MY_RECAP/classroom/templates/classroom/new.html
+++ b/05_django_advance/02_MY_RECAP/classroom/templates/classroom/new.html
@@ -25,6 +25,6 @@
 </div>
 </form>
 <a href="{% url 'classroom:list' %}">
-    <button>BACK TO LIST◀</button>
+    <button>HOME<span>&#x1F3E1;</span></button>
 </a>
 {% endblock body %}
