--- a/05_django_advance/01_DJANGO_RECAP/board/templates/board/list.html
+++ b/05_django_advance/01_DJANGO_RECAP/board/templates/board/list.html
@@ -9,14 +9,17 @@
         <button>New article</button>
     </a>
 
-<ul>
-    {% for article in articles %} <!-- [<A1>, <A2>, <A3>, ...] -->
-        <li>
-            <a href="{{ article.get_absolute_url }}">
-                {{ article.title }}
-            </a>
-        </li> <!-- <A1> -->
-    {% endfor %}
-</ul>
+{% if articles %} <!--articles에 데이터가 존재할 때만 for문 돌도록-->
+    <ul>
+        {% for article in articles %} <!-- [<A1>, <A2>, <A3>, ...] -->
+            <li>
+                <a href="{{ article.get_absolute_url }}">
+                    {{ article.title }}
+                </a>
+            </li> <!-- <A1> -->
+        {% endfor %}
+    </ul>
+{% endif %}
+
 {% endblock %}
 
