--- a/05_django_advance/01_DJANGO_RECAP/board/templates/board/new.html
+++ b/05_django_advance/01_DJANGO_RECAP/board/templates/board/new.html
@@ -3,11 +3,7 @@
 
 {% block body %}
 <h1>New article</h1>
-<form method="POST">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit">
-</form>
+{% include 'board/_form.html' %}
 
 {% endblock body %}
 
