--- a/05_django_advance/01_DJANGO_RECAP/board/templates/board/list.html
+++ b/05_django_advance/01_DJANGO_RECAP/board/templates/board/list.html
@@ -5,7 +5,7 @@
 
 {% block body %}
 <h1>This is Article list</h1>
-    <a href="{% url 'board:new' %}">
+    <a href="{% url 'board:new_article' %}">
         <button>New article</button>
     </a>
 
