프로젝트 공통 템플릿 settings 등록, 수정시시간변경

--- a/05_django_advance/01_DJANGO_RECAP/board/templates/board/detail.html
+++ b/05_django_advance/01_DJANGO_RECAP/board/templates/board/detail.html
@@ -1,9 +1,13 @@
-{% extends 'board/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Article detail{% endblock %}
 
 {% block body %}
     <h1>{{ article.title }}</h1>
+    <div>
+    <small>created : {{article.created_at}}</small>
+    <small>updated : {{article.updated_at}}</small>
+    </div>
     <p>
         {{ article.content }}
     </p>
