--- a/05_django_advance/01_DJANGO_RECAP/board/templates/board/list.html
+++ b/05_django_advance/01_DJANGO_RECAP/board/templates/board/list.html
@@ -1,7 +1,7 @@
-{% extends 'board/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Article list
-{% endblock %}
+{% endblock title %}
 
 {% block body %}
 <h1>This is Article list</h1>
