03_IMAGE_UPLOAD | Django create user Login/Logout | 191017

--- a/05_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_list.html
+++ b/05_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_list.html
@@ -4,14 +4,17 @@
 {% endblock title %}
 
 {% block body %}
-{% include 'sns/_header.html' %}
+    {% if user.is_authenticated %}
+        {% include 'sns/_header.html' %}
+    {% endif %}
 
 
-{% if postings %}
-    <section class="card-columns">
-        {% for posting in postings %}
-            {% include 'sns/_card.html' %}
-        {% endfor %}
-    </section>
-{% endif %}
+
+    {% if postings %}
+        <section class="card-columns">
+            {% for posting in postings %}
+                {% include 'sns/_card.html' %}
+            {% endfor %}
+        </section>
+    {% endif %}
 {% endblock body %}
