--- a/05_django_advance/03_IMAGE_UPLOAD/accounts/templates/accounts/signup.html
+++ b/05_django_advance/03_IMAGE_UPLOAD/accounts/templates/accounts/signup.html
@@ -1,16 +1,7 @@
 {% extends 'accounts/base.html' %}
-{% load bootstrap4%}
 
 {% block title %}Sign up{% endblock title %}
-{% block body %}
-    <form action="" method="POST">
-    {% csrf_token %}
-    {% bootstrap_form form %}
-    <hr>
-    {{ form.as_p}}
-    {% buttons %}
-        <button type="submit" class="btn btn-primary">Submit</button>
-    {% endbuttons %}
-    </form>
 
+{% block body %}
+    {% include 'accounts/_form.html' %}
 {% endblock body %}
