--- a/05_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/_card.html
+++ b/05_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/_card.html
@@ -7,6 +7,6 @@
         {% endif %}                
     </a> 
     <div class="card-body">
-        <i class= "{{ posting.icon }}"></i> {{ posting.content }}
+        <i class= "{{ posting.icon }} fa-2x"></i> {{ posting.content }}
     </div>           
 </article>
