--- a/05_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/_comment.html
+++ b/05_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/_comment.html
@@ -1,9 +1,10 @@
 <div class="col-12 col-md-6">
+    
     <div class="card mb-2">
         <div class="card-body">
             <form action="{% url 'sns:create_comment' posting.id %}" method="POST">
                 {% csrf_token %}
-                <label for="comment">leave comment</label>
+                <label for="comment"><strong>{{request.user}}</strong>, leave comment to {{ posting.user }} </label>
                 <input type="text" name="content" id="comment" class="form-control" autofocus>
             </form>            
         </div>
@@ -15,7 +16,7 @@
                 {% for comment in comments %}
                     <div class="row">
                         <div class="col-10">
-                            <li class="list-group-item mb-1">익명{{ forloop.counter }} : {{ comment.content }}</li>
+                            <li class="list-group-item mb-1"><strong>{{ comment.user }}</strong> : {{ comment.content }}</li>
                         </div>
                         
                         <div class="col-2 mt-2">
