--- a/05_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/_navbar.html
+++ b/05_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/_navbar.html
@@ -1,11 +1,34 @@
 <nav>
     <ul class="nav nav-tabs">
         <li class="nav-item">
-            <a href="{% url 'sns:posting_list' %}" class="nav-link {% block list %}{% endblock list %}">
+            <a href="{% url 'sns:posting_list' %}" class="nav-link {% block list %}{% endblock list %}">SNS</a>
         </li>
         
         <li class="nav-item">
             <a aria-disabled="true" class="nav-link {% block detail %}{% endblock detail %}">Detail</a>
         </li>
+
+        {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a href="{% url 'accounts:logout' %}" class="nav-link">Logout</a>
+            </li>
+            {% comment %} user는 전역변수 같은 것 {% endcomment %}
+            <li class="nav-item">
+                <a href="#" class="nav-link">{{ user.username }}</a>
+            </li>
+        {% else %}
+            <li class="nav-item">
+                <a href="{% url 'accounts:signup' %}" class="nav-link">Signup</a>
+            </li>
+            <li class="nav-item">
+                <a href="{% url 'accounts:login' %}" class="nav-link">Login</a>
+            </li>
+        {% endif %}   
+       
     </ul>
 </nav>
+
+
+
+
+
