--- a/05_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_detail.html
+++ b/05_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_detail.html
@@ -21,18 +21,21 @@
 
                 <div class="row"> <!-- 한 줄을 만들고 -->
                     <!-- 10칸을 posting의 content에 주고 -->
-                    <div class="col-10"> 
+                    <div class="col-10">
+                        <p class="card-text">{{ posting.user }}</p>
                         <p class="card-text">{{ posting.content }}</p>
                     </div>
 
                     <!-- 2칸을 휴지통 icon에 주려고 -->
-                    <div class="col-2"> 
-                        <form action="{% url 'sns:delete_posting' posting.id %}" method="POST">
-                        {% csrf_token %}
+                    <div class="col-2">
+                        {% if user == posting.user %}
+                            <form action="{% url 'sns:delete_posting' posting.id %}" method="POST">
+                            {% csrf_token %}
                             <button>
                                 <i class="fas fa-trash"></i>
                             </button>
                         </form>
+                        {% endif %}                        
                     </div>
 
                 </div>
