--- a/05_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_detail.html
+++ b/05_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_detail.html
@@ -16,7 +16,26 @@
             </div>
 
             <div class="card-body">
-                <i class="{{ posting.icon }} fa-2x"></i>
+            <div class="row">
+                <div class="col-2">
+                    <i class="{{ posting.icon }} fa-2x"></i>
+                </div>
+                <div class="col-2">
+                    <small>{{ posting.like_users.count }} 명이 좋아합니다.</small>
+                </div>
+                <div class="col-2">
+                    <form action="{% url 'sns:like' posting.id %}" method='POST'>
+                        {% csrf_token %}
+                        <button>
+                        {% if is_like %}
+                            Dislike
+                        {% else %}
+                            Like
+                        {% endif %}</button>
+                    </form>
+                </div>
+            </div>
+
                 <hr>
 
                 <div class="row"> <!-- 한 줄을 만들고 -->
