--- a/05_django_advance/04_INSTAGRAM/postings/templates/postings/posting_form.html
+++ b/05_django_advance/04_INSTAGRAM/postings/templates/postings/posting_form.html
@@ -2,12 +2,14 @@
 {% load bootstrap4 %}
 
 {% block body %}
-    <form method="POST" enctype="mutipart/form-data">
-        {% csrf_token %}
-        {% bootstrap_form posting_form %}
+<form method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+    {% bootstrap_form posting_form %}
+    {% if image_form %}
         {% bootstrap_form image_form show_label=False %}
-        {% buttons %}
-            <button class="btn btn-primary">Submit</button>
-        {% endbuttons %}
-    </form>
+    {% endif %}        
+    {% buttons %}
+    <button class="btn btn-primary">Submit</button>
+    {% endbuttons %}
+</form>
 {% endblock body %}
