--- a/05_django_advance/04_INSTAGRAM/templates/_navbar.html
+++ b/05_django_advance/04_INSTAGRAM/templates/_navbar.html
@@ -14,7 +14,7 @@
                 <a class="nav-link" href="{% url 'postings:create_posting' %}">New</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">MyPage</a>
+                <a href="{% url 'accounts:user_page' user.id %}" class="nav-link">MyPage</a>
             </li>
             <li class="nav-item">
                 <a href="{% url 'accounts:logout' %}" class="nav-link">Logout</a>
